# llmc

./: CONTRIBUTING.md  LICENSE  README.md  llmc  pyproject.toml
docs/: agents.md  aimodel.md  index.md  overview.md  provider.md  roadmap.md
seeds/: agents.json  providers.json
src/llmc/: cli.py  models.py
src/llmc/services/: ai_model_services.py  keyring_service.py  provider_services.py  sync_service.py
tests/: conftest.py  test_models.py  test_provider_services.py  test_sync_service.py
