[project]
name = "llmc"
version = "0.1.0"
description = "A lightweight tool for managing LLM configurations and synchronizing model preferences across AI coding agents."
readme = "README.md"
authors = [
    { name = "Shawn", email = "shawn@shawngrover.ca" }
]
requires-python = ">=3.13"
dependencies = [
    "keyring>=25.7.0",
    "litellm>=1.83.0",
    "pydantic>=2.13.3",
    "rich>=15.0.0",
    "typer>=0.24.1",
    "pyyaml>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.1.0",
]

[project.urls]
homepage = "https://github.com/grovercoder/llmc"
documentation = "https://github.com/grovercoder/llmc/tree/main/docs"

[build-system]
requires = ["uv_build>=0.10.8,<0.11.0"]
build-backend = "uv_build"

[project.scripts]
llmc = "llmc.cli:app"
